--- a/_includes/news.html
+++ b/_includes/news.html
@@ -6,6 +6,6 @@
 {{ article.date }}<br>{{ article.headline | markdownify}}
 {% endfor %}
 
-<h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
+<!-- <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4> -->
 
     </div>
